<resources>
    <string name="app_name">马鞍山公交易出行</string>
    <string name="title_tips">提示</string>
    <string name="title_tips_confim">确定</string>
    <string name="title_tips_cancel">取消</string>
    <string name="welcome_text1">为公众出行安全提供有力的保障</string>
    <string name="company_name">马鞍山公交集团有限公司</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="welcome_user_app">欢迎使用马鞍山公交易出行系统</string>
    <string name="login_username">请输入用户名</string>
    <string name="login_password">请输入用户密码</string>
    <string name="forgrt_password">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="select_city">选择城市</string>
    <string name="city_list">城市列表</string>

    <!--首页-->
    <string name="first_page">首页</string>

    <!--bus-->
    <string name="line_found">查询线路</string>
    <string name="bus_change">公交换乘</string>
    <string name="station_found">站点查询</string>
    <string name="no_stop">直达查询</string>
    <string name="store_up">收藏夹</string>
    <string name="select_sxx">请选择上下行</string>
</resources>
