<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".welcome.activity.LoginActivity">

    <com.example.myframe.http.views.Header
        android:id="@+id/header"
        style="@style/Header"
        app:header_is_left_iv_visiable="false"
        app:header_title="@string/app_name">
    </com.example.myframe.http.views.Header>


    <ImageView
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/linearlayout_radius"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_username" />

        <EditText
            android:id="@+id/et_LoginName"
            style="@style/EditText"
            android:hint="@string/login_username"
            android:textColor="@color/bg_do_botttom" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/linearlayout_radius"
        android:orientation="horizontal">

        <ImageView
            style="@style/ImaheView"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_password" />

        <EditText
            android:id="@+id/et_LoginPassword"
            style="@style/EditText"
            android:hint="@string/login_password"
            android:textColor="@color/bg_do_botttom" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:padding="8dp"
            android:text="@string/forgrt_password" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="25dp"
        android:background="@drawable/linearlayout_colore_radius"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_register"
        android:textColor="@color/color_bg_selected" />
</LinearLayout>
